# reconciliation

./: .gitignore  Dockerfile  Makefile  PROJECT_PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
migrations/: env.py  script.py.mako
migrations/versions/: 0001_stage1_schema.py
src/reconciliation/: app.py  batch.py  cli.py  config.py  kafka.py  kafka_ledger_consumer.py  ledger_fetcher.py  reconciler.py  schemas.py  server.py  storage.py  tracing.py
src/reconciliation/breaks/: __init__.py  aging.py  auto_resolve.py
src/reconciliation/db/: __init__.py  base.py  declarative_base.py  models.py  repository.py  session.py
src/reconciliation/matching/: __init__.py
src/reconciliation/reports/: __init__.py  generator.py
tests/: conftest.py  test_aging.py  test_api.py  test_auto_resolve.py  test_breaks.py  test_cli.py  test_config.py  test_config_db.py  test_health.py  test_kafka.py  test_kafka_ledger_consumer.py  test_ledger_fetcher.py  test_matching.py  test_migrations.py  test_models.py  test_reconciler.py  test_reports.py  test_storage.py
